dataset1235/2025-2/2318198438/users/3878856075/executions/2445341515_3306861601.log
== RUN (2025-09-02 00:43:55)
-- CODE: 
from math import tan() 

# faça seu código aqui!
Area=9/2*9*apótema
apótema=float(input(9/2*tan(pi/9)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
File "XXXX", line 1
    from math import tan() 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:46:37)
-- CODE: 
from math import pi

# faça seu código aqui!
lado=float(input(":"))
Area=9/2*lado*x
x=lado/2*tan(pi/9)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 00:57:06)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=lado/(2*tan(pi/9))

print(round((9/2)*lado*apotema,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
:55.64
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
:748.0
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
:395.64
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
:222.55
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
:98.91
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
:154.55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:43:48)
-- CODE: 
from math import tan() e pi

# faça seu código aqui!
Area=9/2*9*apótema
apótema=float(input(9/2*tan(pi/9)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
File "XXXX", line 1
    from math import tan() e pi
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:44:49)
-- CODE: 
from math import pi

# faça seu código aqui!
apótema=float(input())
Area=9/2*9*apótema

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
None
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
None
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
None
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
None
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
None
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:53:28)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=lado/2*tan(pi/9)

print(round(9/2*lado*apotema,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
:7.37
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
:99.09
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
:52.41
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
:29.48
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
:13.1
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
:20.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:47:28)
-- CODE: 
from math import pi

# faça seu código aqui!
lado=float(input(":"))
Area=9/2*lado*x
x=lado/2*tan(pi/9)

print(round())

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*x
                  ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:44:08)
-- CODE: 
from math import pi

# faça seu código aqui!
Area=9/2*9*apótema
apótema=float(input(9/2*tan(pi/9)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area=9/2*9*apótema
               ^^^^^^^
NameError: name 'apótema' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:46:02)
-- CODE: 
from math import pi

# faça seu código aqui!
lado=float(input(":"))
Area=9/2*lado*apótema
apótema=lado/2*tan(pi)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area=9/2*lado*apótema
                  ^^^^^^^
NameError: name 'apótema' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:48:28)
-- CODE: 
from math import pi

# faça seu código aqui!
lado=float(input(lado/2*tan(pi/9)))
Area=9/2*lado*x


print(round(x, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lado=float(input(lado/2*tan(pi/9)))
                     ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:52:50)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=lado/2*tan(pi/9)

print(9/2*lado*apot,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:53:04)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=lado/2*tan(pi/9)

print(9/2*lado*apotema,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
:7.370397243890597 2
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
:99.09089627897359 2
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
:52.411713734333134 2
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
:29.48158897556239 2
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
:13.102928433583283 2
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
:20.47332567747388 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:44:34)
-- CODE: 
from math import pi

# faça seu código aqui!
apótema
Area=9/2*9*apótema

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    apótema
NameError: name 'apótema' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:54:32)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=(lado)/2*tan(pi/9)

print(round((9/2)*lado*apotema,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
:7.37
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
:99.09
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
:52.41
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
:29.48
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
:13.1
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
:20.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:53:59)
-- CODE: 
from math import pi , tan

# faça seu código aqui!
lado=float(input(":"))
apotema=lado/2*tan(pi/9)

print(round((9/2)*lado*apotema,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
---- user output:
:7.37
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
---- user output:
:99.09
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
---- user output:
:52.41
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
---- user output:
:29.48
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
---- user output:
:13.1
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
---- user output:
:20.47
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:50:50)
-- CODE: 
from math import pi

# faça seu código aqui!
lado=float(input(":"))

print(9/2*lado*apot,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
3
---- correct output:
55.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 2:
---- input:
11
---- correct output:
748.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 3:
---- input:
8
---- correct output:
395.64
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 4:
---- input:
6
---- correct output:
222.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 5:
---- input:
4
---- correct output:
98.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
-- TEST CASE 6:
---- input:
5
---- correct output:
154.55
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(9/2*lado*apot,2)
                   ^^^^
NameError: name 'apot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
